# epub-automation

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_INDEX.md  Makefile  README.md  kokoro_spike.spec  launcher.py  main.py  pyproject.toml  requirements.txt  run_gui.vbs
.github/workflows/: ci.yml
_removed/: _expected_folder_name_snippet.py
backend/: __init__.py  app.py  bridge.py  dialogs.py
design/: SYSTEM_DESIGN.md
design/adr/: 0001-flask-waitress-react-over-pywebview.md  0002-local-kokoro-tts-over-browser-automation.md  0003-pluggable-user-keyed-ai-provider.md  0004-sanitize-ported-powershell-to-python.md  0005-appdata-settings-storage-atomic-writes.md  0006-native-folder-pickers-via-tkinter.md  0007-single-instance-lock-shared-across-frontends.md  0008-localhost-only-binding.md  0009-serial-audio-generation-reserved-workers-flag.md  0010-no-persistent-per-series-voice-memory.md  0011-pyinstaller-packaging-no-code-signing.md  0012-retain-copyleft-dependencies.md  0013-epub-only-input-format.md  0014-reuse-existing-implementations-by-default.md  README.md
docs/: BACKLOG.md  design_review.md
docs/design/: PATTERNS.md  SYSTEM_DESIGN.md
docs/design/adr/: 0001-flask-waitress-react-over-pywebview.md  0002-local-kokoro-tts-over-browser-automation.md  0003-pluggable-user-keyed-ai-provider.md  0004-sanitize-ported-powershell-to-python.md  0005-appdata-settings-storage-atomic-writes.md  0006-native-folder-pickers-via-tkinter.md  0007-single-instance-lock-shared-across-frontends.md  0008-localhost-only-binding.md  0009-serial-audio-generation-reserved-workers-flag.md  0010-no-persistent-per-series-voice-memory.md  0011-pyinstaller-packaging-no-code-signing.md  0012-retain-copyleft-dependencies.md  0013-epub-only-input-format.md  0014-reuse-existing-implementations-by-default.md  0015-wcag-aa-alignment-broadened-accessibility-scope.md  0016-windows-safe-filesystem-naming.md  0017-library-staging-cleanup.md  0018-mp3-encoding-lameenc-native-sample-rate.md  0019-chapter-title-detection-broadened.md  0020-merge-audio-chunks-into-per-chapter-parts.md  README.md
docs/requirements/: 00-overview-and-goals.md  01-architecture.md  02-pipeline-stages.md  03-gui-ux-design.md  04-tts-engine.md  05-data-settings-and-logging.md  06-safety-error-handling.md  07-packaging-deployment.md  08-open-questions-and-assumptions.md  09-testing-strategy.md  10-licensing-and-notices.md  README.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/shared/: AppHeader.test.tsx  AppHeader.tsx  BigButton.test.tsx  BigButton.tsx  EditableFieldRow.test.tsx  EditableFieldRow.tsx  FieldCorrectionPopup.test.tsx  FieldCorrectionPopup.tsx  LiveRegion.test.tsx  LiveRegion.tsx  Overlay.test.tsx  Overlay.tsx  RadioRow.test.tsx  RadioRow.tsx  RemoveBookButton.test.tsx  RemoveBookButton.tsx  StepProgress.test.tsx  StepProgress.tsx  ToggleSwitch.test.tsx  ToggleSwitch.tsx  VoicePicker.test.tsx  VoicePicker.tsx
frontend/src/hooks/: useAriaLiveThrottled.test.ts  useAriaLiveThrottled.ts  useFocusTrap.test.tsx  useFocusTrap.ts  usePollingStatus.test.ts  usePollingStatus.ts
frontend/src/screens/: AddBooksScreen.test.tsx  AddBooksScreen.tsx  AiHelperSetup.test.tsx  AiHelperSetup.tsx  CollisionPrompt.test.tsx  CollisionPrompt.tsx  ConfirmMetadataScreen.test.tsx  ConfirmMetadataScreen.tsx  ErrorScreen.test.tsx  ErrorScreen.tsx  FixInfoFlow.test.tsx  FixInfoFlow.tsx  FoldersScreen.test.tsx  FoldersScreen.tsx  MoreOptionsScreen.test.tsx  MoreOptionsScreen.tsx  ReviewScreen.test.tsx  ReviewScreen.tsx  VoiceAssignmentScreen.test.tsx  VoiceAssignmentScreen.tsx  VoiceHistoryScreen.test.tsx  VoiceHistoryScreen.tsx  WelcomeBack.test.tsx  WelcomeBack.tsx  WordsScreen.test.tsx  WordsScreen.tsx  WorkingScreen.test.tsx  WorkingScreen.tsx
frontend/src/test/: setup.ts  vitest-axe.d.ts
frontend/src/utils/: authorName.ts
frontend/src/viewmodels/: useVoiceAssignmentView.test.ts  useVoiceAssignmentView.ts  useWorkingScreenView.test.ts  useWorkingScreenView.ts
pipeline/: __init__.py  atomic_write.py  audio_stage.py  audit_logger.py  batch_runner.py  cli_runner.py  config.py  disk_space.py  epub_reader.py  epub_utils.py  input_validation.py  profanity.txt  rename_stage.py  retag_stage.py  safe_zip.py  sanitize_stage.py  single_instance.py  stage.py  state_manager.py  tts_engine.py
pipeline/ai_providers/: base.py  gemini_provider.py  null_provider.py  openai_provider.py  registry.py
requirements/: 00-overview-and-goals.md  01-architecture.md  02-pipeline-stages.md  03-gui-ux-design.md  04-tts-engine.md  05-data-settings-and-logging.md  06-safety-error-handling.md  07-packaging-deployment.md  08-open-questions-and-assumptions.md  09-testing-strategy.md  10-licensing-and-notices.md  README.md
spike/: kokoro_spike.py
tests/: test_ai_providers.py  test_app.py  test_atomic_write.py  test_audio_stage.py  test_audit_logger.py  test_batch_runner.py  test_bridge.py  test_cli_runner.py  test_config.py  test_dialogs.py  test_disk_space.py  test_epub_reader.py  test_epub_utils.py  test_gemini_provider.py  test_input_validation.py  test_launcher.py  test_main.py  test_openai_provider.py  test_rename_stage.py  test_retag_stage.py  test_safe_zip.py  test_sanitize_stage.py  test_single_instance.py  test_stage.py  test_state_manager.py  test_tts_engine.py
